<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Invitation Scheduler</string>
    <string name="fullname_string">Full Name</string>
    <string name="password_string_two">Password</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="mobile_number_string">Mobile Number</string>
    <string name="show_pwd">show password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgotpassword_string">forgot password?</string>
    <string name="log_in_string">LOG IN</string>
    <string name="not_a_member_yet__sign_up_here__string">Not a Member yet? Sign Up here.</string>
    <string name="please_enter_your_registered_email_id_below___string">Please enter your Registered\
Email Id below: </string>
    <string name="back_string">back</string>
    <string name="submit_string">submit</string>
    <string name="sign_up_string">SIGN UP</string>
    <string name="already_have_an_account__login_here__string">Already have an account? Login here.</string>
    <string name="Email">Email</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="log_out">Logout</string>
    <string name="edit">Edit</string>
    <string name="event_name">Event Name : </string>
    <string name="name">Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="add">Add</string>
    <string name="empty_recycle">Please add new Event</string>
    <string name="delete">delete</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email id</string>
    <string name="address">Address</string>
    <string name="glist">Go to guest list</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="guest_number">Number of guest :</string>
    <string name="number">num</string>
    <string name="empty_guest">Add new guest</string>
    <string name="guest_detail">Guest Detail</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="invitation_number">Number of invitation sent :</string>
    <string name="invitation_not_number">Number of invitation left :</string>
    <string name="not_sent">Not sent</string>
    <string name="import_string">Import</string>
    <string name="place">Location of event</string>
    <string name="choose_location">Add location</string>
    <string name="send_messages">send messages</string>
    <string name="fullstop">.</string>
    <string name="info">This project is created by Dhruvit Maniya and Vaidik Panchal for university subject Software group project.</string>
    <string name="contact_us">contact us</string>
    <string name="dhruvit_email"><u>maniyadhruvit@gmail.com</u></string>
    <string name="about_app">About app</string>
    <string name="aboutapp">This app will help you in organizing your events.</string>
    <string name="owner">Ownership</string>
    <string name="vaidik_email"><u>vaidikpanchal2@gmail.com</u></string>
</resources>