<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tool:context=".login.SignupActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/logo"
                android:clipToPadding="false" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sign_up_string"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawableStart="@drawable/username"
                android:gravity="center_vertical"
                android:hint="@string/fullname_string"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawableStart="@drawable/email"
                android:gravity="center_vertical"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_mnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawableStart="@drawable/phone"
                android:gravity="center_vertical"
                android:hint="@string/mobile_number_string"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_pswd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawableStart="@drawable/password"
                android:gravity="center_vertical"
                android:hint="@string/password_string_two"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_cpswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:drawableStart="@drawable/confirmpassword"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password_string"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:padding="3dp"
                android:text="@string/sign_up_string"
                android:textColor="@color/background_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/already_have_an_account__login_here__string"
                android:textColor="@drawable/text_selector"
                android:textSize="15sp" />

        </LinearLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>