<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".event.GuestDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectanglebg"
            android:padding="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/guest_detail"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_guestname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="18sp"
                android:hint="@string/name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_sent"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_selector"
                    android:text="@string/invitation_sent"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_not_sent"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_selector_s"
                    android:text="@string/not_sent"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectanglebg"
            android:padding="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_detail"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_phonenumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/btn_call"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:src="@drawable/phone"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/email_id"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/btn_mail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:src="@drawable/email"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/address"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/btn_map"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:src="@drawable/location"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/add"
            android:textColor="@color/background_color"
            android:visibility="visible" />

    </LinearLayout>
</ScrollView>